Added Search Form.

--- a/client/html/home/carousel.html
+++ b/client/html/home/carousel.html
@@ -1,4 +1,39 @@
 <template name="carousel">
+    <div class="container carousel-container">
+        <div class="slider-size" id="masthead">
+            {{> navbar}}
+            <div class="row main-heading">
+                <h1 class="text-jumbo"> WELCOME HOME </h1>
+                <h5 class="text-contrast"> Eat home cooked food from 100 cities across the country.</h5>
+            </div>
+
+            <div class="row search-form">
+                <form class="form-inline" role="form">
+                  <div class="form-group">
+                    <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                    <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Where do you want to go?">
+                </div>
+                <div class="form-group">
+                    <div class="input-group">
+                      <div class="input-group-addon">@</div>
+                      <input class="form-control" type="email" placeholder="Enter email">
+                  </div>
+              </div>
+              <div class="form-group">
+                <label class="sr-only" for="exampleInputPassword2">Password</label>
+                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
+            </div>
+            <div class="checkbox">
+                <label>
+                  <input type="checkbox"> Remember me
+              </label>
+          </div>
+          <button type="submit" class="btn btn-default">Sign in</button>
+      </form>
+  </div>
+
+        </div>
+    </div>
 <!--     <div id="carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="item active">
@@ -50,5 +85,5 @@
             <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
     </div> -->
-    <div class="slider-size" id="masthead"></div>
+    
 </template>
