--- a/client/html/home/carousel.html
+++ b/client/html/home/carousel.html
@@ -1,89 +1,34 @@
 <template name="carousel">
     <div class="container carousel-container">
-        <div class="slider-size" id="masthead">
-            {{> navbar}}
-            <div class="row main-heading">
-                <h1 class="text-jumbo"> WELCOME HOME </h1>
-                <h5 class="text-contrast"> Eat home cooked food from 100 cities across the country.</h5>
-            </div>
+        <div id="back-image">
+            <div class="slider-size" id="masthead">
+                {{> navbar}}
+                <div class="row main-heading">
+                    <h1 class="text-jumbo"> WELCOME HOME </h1>
+                    <h5 class="text-contrast"> Eat home cooked food from 100 cities across the country.</h5>
+                </div>
 
-            <div class="row search-form">
-                <form class="form-inline" role="form">
-                  <div class="form-group">
-                    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                    <input type="text" class="form-control" id="exampleInputEmail2" placeholder="Where do you want to go?">
-                </div>
-                <div class="form-group">
-                    <div class="input-group">
-                      <div class="input-group-addon">@</div>
-                      <input class="form-control" type="email" placeholder="Enter email">
-                  </div>
-              </div>
-              <div class="form-group">
-                <label class="sr-only" for="exampleInputPassword2">Password</label>
-                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
-            </div>
-            <div class="checkbox">
-                <label>
-                  <input type="checkbox"> Remember me
-              </label>
-          </div>
-          <button type="submit" class="btn btn-default">Sign in</button>
-      </form>
-  </div>
-
-        </div>
-    </div>
-<!--     <div id="carousel" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="item active">
-                <div style="background:url(/back2.jpg) center center; 
-                background-size:cover;" class="slider-size">{{> navbar}}</div>
-                <div class="carousel-caption">
-                    <h3>Some Coffee</h3>
-                    <p>Chat over some hot coffee with your friends.</p>
-                </div>
-            </div>
-            <div class="item">
-                <div style="background:url(/back3.jpg) center center; 
-                background-size:cover;" class="slider-size">{{> navbar}}</div>
-                <div class="carousel-caption">
-                    <h3>Some Coffee</h3>
-                    <p>Chat over some hot coffee with your friends.</p>
-                </div>
-            </div>
-            <div class="item">
-                <div style="background:url(/back4.jpg) center center; 
-                background-size:cover;" class="slider-size">{{> navbar}}</div>
-                <div class="carousel-caption">
-                    <h3>Some Coffee</h3>
-                    <p>Chat over some hot coffee with your friends.</p>
-                </div>
-            </div>
-            <div class="item">
-                <div style="background:url(/back5.jpg) center center; 
-                background-size:cover;" class="slider-size">{{> navbar}}</div>
-                <div class="carousel-caption">
-                    <h3>Some Coffee</h3>
-                    <p>Chat over some hot coffee with your friends.</p>
-                </div>
-            </div>
-            <div class="item">
-                <div style="background:url(/back6.jpg) center center; 
-                background-size:cover;" class="slider-size">{{> navbar}}</div>
-                <div class="carousel-caption">
-                    <h3>Some Coffee</h3>
-                    <p>Chat over some hot coffee with your friends.</p>
+                <div class="row search-form">
+                    <form class="form-inline" role="form">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="" placeholder="Where do you want to go?">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control control-width" type="text" placeholder="Check In">
+                        </div>
+                        <div class="form-group">
+                            <select class="form-control control-width">
+                                <option>1 Guest</option>
+                                <option>2 Guests</option>
+                                <option>3 Guests</option>
+                                <option>4 Guests</option>
+                                <option>5 Guests</option>
+                            </select>
+                        </div>
+                        <button type="submit" class="btn btn-default control-width">Search</button>
+                    </form>
                 </div>
             </div>
         </div>
-
-        <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-        </a>
-        <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-        </a>
-    </div> -->
-    
+    </div>  
 </template>
